[OS/2] Bug 355077: fix xulrunner-stub to work on OS/2, p=abwillis1+me, r=mkaply